# ITMO.NeuralProcessor

./: .gitignore  CMakeLists.txt  main.cpp  network.json  weight_regroup.py
src/: adder_array.h  adder_buffer.h  adder_mmm.h  bus_channel.cpp  bus_interface.h  bus_multiplexer.h  clk.cpp  control_unit.h  floating_point_adder.h  io_module.h  local_memory.h  math.cpp  math.h  memory.cpp  memory.h  multiplier.cpp  multiplier_array.h  neural_math.h  neural_processor.h  pe_core.h  shared_memory.h  sigmoid.h  summator.cpp  summator.h
tests/: adder_array_tb.cpp  adder_buffer_tb.cpp  adder_mmm_tb.cpp  adder_tb.cpp  bus_tb.cpp  counter_tb.cpp  io_module_tb.cpp  local_memory_tb.cpp  memory_tb.cpp  multiplier_array_tb.cpp  multiplier_tb.cpp  neural_math_tb.cpp  neural_processor_tb.cpp  pe_core_tb.cpp  sigmoid_tb.cpp  summator_tb.cpp
